# CUDA_KMeans

./: CMakeLists.txt  README.md
include/: kmeans.h
report/: acmart.cls  template.tex
scripts/: CMakeLists.txt  experiments.py  generate_expected.c  output100D2_K10.txt  output100D2_K500.txt  output10D_test.txt
scripts/results/: kmeans_results_20250507_093751.csv
src/: CMakeLists.txt  common.c  kmeans.c  kmeans_centroids.cu  kmeans_cuda.cu  kmeans_distances.cu  kmeans_full.cu  main.c
test/: CMakeLists.txt  kmeans_test.cpp
